--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-progress-2": "^4.4.3",
     "react-with-direction": "^1.3.0",
     "styled-components": "^4.1.3",
+    "url-loader": "^1.1.2",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
