--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "webpack": "webpack --config webpack.config.js",
     "prod": "webpack -p",
     "start": "server.js",
-    "dev": "webpack-dev-server ---mode development --watch --display-error-details --hot --inline",
+    "dev": "webpack-dev-server --content-base src --hot --inline",
     "lint": "eslint **/**/*.{js,jsx} --quiet",
     "test": "jest"
   },
